--- a/carpool-front/src/app/features/families/pages/family-list/family-list.component.html
+++ b/carpool-front/src/app/features/families/pages/family-list/family-list.component.html
@@ -44,10 +44,10 @@
             <div class="child-item" *ngFor="let child of family.children">
               <div class="child-info">
                 <span class="child-name">{{ child.name }}</span>
-                <div class="child-absences" *ngIf="child.absenceDays && child.absenceDays.size > 0">
+                <div class="child-absences" *ngIf="hasAbsences(child.absenceDays)">
                   <span class="absences-label">Absences:</span>
                   <div class="absences-tags">
-                    <span class="absence-tag" *ngFor="let absence of child.absenceDays">
+                    <span class="absence-tag" *ngFor="let absence of getAbsenceDaysArray(child.absenceDays)">
                       {{ getShortDay(absence.weekDay) }} {{ getShortWeekType(absence.weekType) }}
                     </span>
                   </div>
