--- a/carpool-front/src/app/features/families/pages/family-list/family-list.component.html
+++ b/carpool-front/src/app/features/families/pages/family-list/family-list.component.html
@@ -44,29 +44,35 @@
             <div class="child-item" *ngFor="let child of family.children">
               <div class="child-info">
                 <span class="child-name">{{ child.name }}</span>
-                <div class="child-absences" *ngIf="child.absenceDays">
-                  <span class="absences-label">Absences:</span>
-                  <div class="absences-tags">
+                @if (child.absenceDays ?? 0 > 0 ) {
+                  <div class="child-absences">
+                    <span class="absences-label">Absences:</span>
+                    <div class="absences-tags">
                     <span class="absence-tag" *ngFor="let absence of getAbsenceDaysArray(child.absenceDays)">
-                      {{ getShortDay(absence.weekDay) }} {{ getShortWeekType(absence.weekType) }}
+                      {{ getShortWeekType(absence.weekType) }} {{ getShortDay(absence.weekDay) }}
                     </span>
+                    </div>
                   </div>
-                </div>
+                }
+
               </div>
             </div>
           </div>
         </div>
 
-        <div class="unavailabilities-section" *ngIf="hasUnavailabilities(family.requirements)">
-          <h4>Indisponibilités famille ({{ family.requirements?.size }})</h4>
-          <div class="unavailabilities-list">
-            <div class="unavailability-tags">
+        @if (hasUnavailabilities(family.requirements)) {
+          <div class="unavailabilities-section">
+            <h4>Indisponibilités famille ({{ family.requirements?.size }})</h4>
+            <div class="unavailabilities-list">
+              <div class="unavailability-tags">
               <span class="unavailability-tag" *ngFor="let unavailability of getUnavailabilitiesArray(family.requirements)">
                 {{ getShortDay(unavailability.weekDay) }} {{ getShortTimeSlot(unavailability.timeSlot) }} {{ getShortWeekType(unavailability.weekType) }}
               </span>
+              </div>
             </div>
           </div>
-        </div>
+        }
+
       </div>
     </div>
 
